--- a/lada_front/package.json
+++ b/lada_front/package.json
@@ -12,7 +12,8 @@
     "mitt": "^3.0.0",
     "vue": "^3.2.13",
     "vue-event-bus": "^1.0.2",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
