--- a/.github/workflows/github-actions-build.yml
+++ b/.github/workflows/github-actions-build.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
+        working-directory: ./lada_front
+        run: npm run build
         with:
           node-version: ${{ matrix.node-version }}
-        working-directory: ./lada_front
-      - run: npm run build
