--- a/.github/workflows/github-actions-build.yml
+++ b/.github/workflows/github-actions-build.yml
@@ -16,6 +16,7 @@ jobs:
         node-version: [10.x, 12.x, 14.x, 15.x]
 
     steps:
+      - run: npm install -g @vue/cli@latest
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         working-directory: ./lada_front
