--- a/.github/workflows/github-actions-build.yml
+++ b/.github/workflows/github-actions-build.yml
@@ -17,6 +17,7 @@ jobs:
 
     steps:
       - run: npm install -g @vue/cli@latest
+      - run: npm install -g @vue/cli-plugin-babel
       - run: npm install -g @vue/cli-service
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
