--- a/flashers/ft232.conf
+++ b/flashers/ft232.conf
@@ -5,9 +5,9 @@ product_id=0x6001       # Product ID
 max_power=0             # Max. power consumption: value * 2 mA. Use 0 if self_powered = true.
 
 # Strings
-manufacturer="ACME Inc"      # Manufacturer
+manufacturer="mpsoft"      # Manufacturer
 product="Emuserial"             # Product
-serial="1111"                # Serial
+serial="11111111"                # Serial
 
 # Options
 #self_powered=true
