Added support for multiple command options

--- a/emuserialpc/Makefile
+++ b/emuserialpc/Makefile
@@ -4,10 +4,13 @@
 CC=cc
 
 all: main.o
-	$(CC) build/main.o build/socket_server.o build/EMUSerial.o build/serial.o -o emuserial -lpthread
+	$(CC) build/main.o build/front.o build/socket_server.o build/EMUSerial.o build/serial.o -o emuserial -lpthread
 
-main.o: 	socket_server.o
+main.o: 	socket_server.o front.o
 	$(CC) main.c -c -o build/main.o
+
+front.o:	EMUSerial.o
+	$(CC) front.c -c -o build/front.o
 
 socket_server.o:	EMUSerial.o
 	$(CC) socket_server.c -c -o build/socket_server.o -lpthread
