--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "emuformat.h": "c",
         "emuserial.h": "c",
         "getopt.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "stdarg.h": "c"
     }
 }
