--- a/.github/workflows/github-actions-build.yml
+++ b/.github/workflows/github-actions-build.yml
@@ -18,5 +18,5 @@ jobs:
     steps:
       - run: npm install -g @vue/cli
       - name: Use Node.js ${{ matrix.node-version }}
-        working-directory: ./lada_front
+        working-directory: ./displayapp
         run: npm run build
