--- a/displayapp/package.json
+++ b/displayapp/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "mitt": "^3.0.0",
     "vue": "^3.2.13",
     "vue-event-bus": "^1.0.2",
     "vue-router": "^4.1.5",
+    "vue3-touch-events": "^4.1.3",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
