--- a/displayapp/package.json
+++ b/displayapp/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.2.13",
     "vue-event-bus": "^1.0.2",
     "vue-router": "^4.1.5",
+    "vue3-grid-layout-next": "^1.0.5",
     "vue3-touch-events": "^4.1.3",
     "vuex": "^4.1.0"
   },
