--- a/displayapp/package.json
+++ b/displayapp/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "mitt": "^3.0.0",
+    "ol-mbtiles": "^2.1.0",
     "vue": "^3.2.13",
     "vue-event-bus": "^1.0.2",
     "vue-router": "^4.1.5",
