Maps - first stage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
         "getopt.h": "c",
         "time.h": "c",
         "serial.h": "c"
-    }
+    },
+    "python.analysis.extraPaths": [
+        "./core/Maps/Gps"
+    ]
 }
