--- a/displayapp/package.json
+++ b/displayapp/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@turf/helpers": "^6.5.0",
+    "@turf/meta": "^6.5.0",
+    "@turf/turf": "^6.5.0",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "mitt": "^3.0.0",
     "ol": "^8.2.0",
+    "togpx": "^0.5.4",
     "vue": "^3.2.13",
     "vue-event-bus": "^1.0.2",
     "vue-router": "^4.1.5",
